# assetbundle

./: .gitignore  Cargo.toml
fsb5/: Cargo.toml  README.md
fsb5/src/: error.rs  lib.rs  pcm.rs
src/: assetbundle.rs  enums.rs  error.rs  lib.rs
