[package]
name = "fsb5"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
byteorder = "1.3"
hound = { optional = true, git = "https://github.com/ruuda/hound.git" }
thiserror = "1.0"

[features]
pcm = ["hound"]
default = ["pcm"]
